# C_language_labs_2021

image-rotation/solution/: CMakeLists.txt
image-rotation/solution/include/: bmp_header.h  bmp_processing.h  image.h  image_utils.h  rotate.h  status_processing.h
image-rotation/solution/src/: bmp_header.c  bmp_processing.c  image_utils.c  main.c  rotate.c  status_processing.c
memory-allocator/: Makefile
memory-allocator/src/: main.c  mem.c  mem_debug.c  mem_debug.h  tests.c  tests.h
